# cpp-tic-tac-toe

./: CMakeLists.txt  Makefile  README.md  main.cpp
.github/workflows/: Make.yml
game/: board.h  client.h  game.h  server.h
tcp_communication/: tcp_client.h  tcp_communication.h  tcp_server.h
